Custom Google Search v1.0.0 - fixed Z-index for UI dialog in WP 3.3;
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/custom-google-search@4794 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/style/cgs-style.css
+++ b/style/cgs-style.css
@@ -90,4 +90,13 @@ wp-google-custom-search CSS Styles
     margin: 0px 0px 15px 0px;
 }
 
+
+/* fix for WP 3.3 */
+.ui-widget-overlay {
+    z-index: 99998 !important;
+}
+.ui-dialog {
+    z-index: 99999 !important;
+}
+
 /* end Popup block */
